base/src/test/resources/failure/counterexamples/basic.aya.txt
In file $FILE:19:19 ->

  17 |  | neg n => n
  18 | 
  19 | counterexample def abs2 (n : Int) => abs n
                          ^--^

Error: The counterexample abs2 does not raise any type error
What are you doing?
